<resources>
    <string name="app_name">Pace</string>
    <string name="sample_text">sample</string>
    <string name="routes_text">Routes: </string>
    <string name="plus_percent_sign">+%</string>
    <string name="negative_percent_sign">-%</string>
    <string name="percent_sign">%</string>

    //Route Statistics Headings
    <string name="mpg_text">MPG</string>
    <string name="date_text">Date</string>
    <string name="gas_price_text">Gas Price</string>
    <string name="gas_added_text">Gas Added to Tank</string>
    <string name="trip_distance_text">Trip Distance</string>
    <string name="income_text">Income</string>
    <string name="route_statistics_header">Route Statistics</string>

    //Route Statistics Hints
    <string name="mpg_hint">miles per gallon</string>
    <string name="date_hint">mm/dd/yy</string>
    <string name="gas_price_hint">in dollars</string>
    <string name="gas_added_hint">in gallons</string>
    <string name="trip_distance_hint">in miles</string>
    <string name="income_hint">in dollars</string>

    //Route Statistics Button Text
    <string name="button_add_text">ADD</string>

    //Home Page Headings
    <string name="home_page_heading">My Wallet</string>
    <string name="averages_text">Averages</string>

    //Settings Page Headings
    <string name="settings_header">Settings</string>
    <string name="general_settings_header">General Settings</string>
    <string name="mode">Mode</string>
    <string name="dark_and_light">Dark/Light</string>
    <string name="miles_and_km">Miles/Km</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="webId">818817431963-ocvfjqat0gcih5sbiiauihs7q5epi1pp.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome Back</string>
    <string name="date_hint">Date</string>
    <string name="sample">sample</string>
    <string name="mpg_hint">MPG</string>
    <string name="gasPrice_hint">Gas Price</string>
    <string name="distance_hint">Distance</string>
    <string name="income_hint">Income</string>
    <string name="textView">TextView</string>
    <string name="mpg_description">How many miles per gallon does your vehicle get?</string>
    <string name="gasPrice_description">What is the price of gas in your area?</string>
    <string name="distance_description">How far was your route?</string>
    <string name="income_description">What was your income from this route?</string>
    <string name="webId">818817431963-ocvfjqat0gcih5sbiiauihs7q5epi1pp.apps.googleusercontent.com</string>
    <string name="input_vehicle_confirm_and_save_button">Confirm and Save</string>
</resources>